Adds score table

--- a/public/principal.html
+++ b/public/principal.html
@@ -19,7 +19,7 @@
                 <span id="phraseLen">30</span> words</li>
             <li>
                 <i class="small material-icons icons">query_builder</i>
-                <span id="time">3</span> seconds</li>
+                <span id="time">10</span> seconds</li>
         </ul>
 
         <textarea class="field" rows="8" cols="40"></textarea>
@@ -34,6 +34,27 @@
             <li><span id="charCounter">0</span> characters</li>
             <li><span id="wordCounter">0</span> words</li>
         </ul>
+    
+        <section class="score">
+            <h3 class="center">Score</h3>
+            <table class="centered bordered">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Word Count</th>
+                        <th>Remove</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>User</td>
+                        <td>999</td>
+                        <td class="remove-button"><a href='#'><i class='small material-icons'>delete</i></a></td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+    
     </div>
     <script src="js/jquery.js"></script>
     <script src="js/main.js"></script>
